--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.13.0"
+    "node": "12.13.0",
+    "npm": "6.12.0"
   },
   "dependencies": {
     "gh-pages": "^2.1.1",
